--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
---text-color: #DBE4EF;
---card-front-color: #88076c;
---card-back-color: #f689fa;
+--text-color: #000000;
+--card-front-color: #ce7abc;
+--card-back-color: #e4bbe6;
 }
 
 body {
