--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
 --text-color: #000000;
---card-front-color: #ce7abc;
---card-back-color: #e4bbe6;
+--card-front-color: #633102ce;
+--card-back-color: #eac2ec;
 }
 
 body {
